# Transformer

./: .gitignore  Cargo.toml  LICENSE  README.md  error_log.csv
data/: config.json
data/mnist/: config.json
data/stocks/: config.json
sample/: config.json
src/: activation_functions.rs  config.rs  csv_plot.rs  data_loader.rs  main.rs  matrix.rs  model.rs  training_logs.rs
