[package]
name = "Transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
csv = "1.3"
once_cell = "1.7"
indicatif = "0.17"
redis = "0.23"  
tokio = { version = "1", features = ["full"] } 
postgres = "0.19" 